--- a/templates/reports.html
+++ b/templates/reports.html
@@ -192,7 +192,12 @@
                     <div class="icon-box theme-finance"><i class="fa-solid fa-coins"></i></div>
                     <i class="fa-solid fa-arrow-right action-icon"></i>
                 </div>
-              
+                <div>
+                    <h5 class="card-title">Profit Analysis</h5>
+                    <p class="card-desc">Calculate Net Profit (Revenue - Costs).</p>
+                </div>
+            </a>
+        </div>
 
         <!-- Expense Report -->
         <div class="col-12 col-md-6 col-lg-4 col-xl-3">
@@ -333,4 +338,3 @@
 
 </div>
 {% endblock %}
-
